<resources>
    <string name="app_name">warrenChallenge</string>
    <string name="login_text">Login</string>
    <string name="password_text">Password</string>
    <string name="input_text">Type here</string>
    <string name="email">mobile_test@warrenbrasil.com</string>
    <string name="password">Warren123!</string>
    <string name="passwordText">Password</string>
    <string name="loginText">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="usernameText">Username</string>
    <string name="sign_in_text">Sign in</string>
    <string name="cardsTitle">Minhas carteiras</string>

    <string-array name="emails_array">
        <item>delgado.ohenrique@gmail.com</item>
        <item>pablo_baldez@warren.com.br</item>
        <item>mobile_test@warrenbrasil.com</item>
        <item>henrique.delgado@warren.com.br</item>
    </string-array>
</resources>